# capicxx-detailed-example

./: .gitignore  CMakeLists.txt  README.md  client-config.json  client_init.sh  commonapi.ini  config.json  service-config.json  service_init.sh
client-proxy/: CMakeLists.txt  commonapi.ini  main.cpp
fdepl/: ivi.fdepl
fidl/bmw/ivi/: ivi.fidl
service-stub/: CMakeLists.txt  IVIServiceImpl.cpp  IVIServiceImpl.hpp  commonapi.ini  main.cpp
src-gen/v1/bmw/ivi/: IVI.hpp  IVIProxy.hpp  IVIProxyBase.hpp  IVISomeIPCatalog.json  IVISomeIPDeployment.cpp  IVISomeIPDeployment.hpp  IVISomeIPProxy.cpp  IVISomeIPProxy.hpp  IVISomeIPStubAdapter.cpp  IVISomeIPStubAdapter.hpp  IVIStub.hpp  IVIStubDefault.hpp
